--- a/src/app/maze/maze.component.scss
+++ b/src/app/maze/maze.component.scss
@@ -1,7 +1,7 @@
 button {
-    width: 20px !important;
+    width: 22px !important;
     min-width: 1px !important;
-    height: 20px;
+    height: 22px;
     line-height: 20px;
     min-height: 20px;
     vertical-align: top;
@@ -12,4 +12,8 @@ button {
 
 .nothing { 
     background-color: white;
+}
+
+.center {
+    margin: auto;
 }
